configs/downloader/flaresolver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaresolverr
  namespace: downloader
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flaresolverr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: flaresolverr
    spec:
      containers:
        - name: flaresolverr
          image: ghcr.io/flaresolverr/flaresolverr:latest
          ports:
            - containerPort: 8191
              name: web
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              memory: 300Mi
