configs/downloader/service.yaml
# Radarr LoadBalancer Service
apiVersion: v1
kind: Service
metadata:
  name: radarr-server-lb
  namespace: downloader
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "radarr.home"
    external-dns.alpha.kubernetes.io/ingress-hostname-source: "service-annotation-only"
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 7878
      name: http
    - port: 443
      targetPort: 7878
      name: https
  selector:
    app: radarr
# Sonarr LoadBalancer Service
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr-server-lb
  namespace: downloader
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "sonarr.home"
    external-dns.alpha.kubernetes.io/ingress-hostname-source: "service-annotation-only"
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8989
      name: http
    - port: 443
      targetPort: 8989
      name: https
  selector:
    app: sonarr
# Prowlarr LoadBalancer Service
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr-server-lb
  namespace: downloader
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "prowlarr.home"
    external-dns.alpha.kubernetes.io/ingress-hostname-source: "service-annotation-only"
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 9696
      name: http
    - port: 443
      targetPort: 9696
      name: https
  selector:
    app: prowlarr
# FlareSolverr LoadBalancer Service
---
apiVersion: v1
kind: Service
metadata:
  name: flaresolverr-server-lb
  namespace: downloader
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "flaresolverr.home"
    external-dns.alpha.kubernetes.io/ingress-hostname-source: "service-annotation-only"
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8191
      name: http
    - port: 443
      targetPort: 8191
      name: https
  selector:
    app: flaresolverr
---
